Fix spacing issues on the quote section

--- a/style.css
+++ b/style.css
@@ -93,19 +93,24 @@ img {
     background-color: #E5E7EB;
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
 
 .quote-text {
     font-size: 36px;
     font-style: italic;
     font-weight: 300;
-    margin: 0 128px;
+    /* margin: 24px 128px; */
+    /* padding: 0px 256px; */
+    margin-top: 80px;
+    width: 840px;
 }
 
 .quote-author {
     font-weight: bold;
     align-self: flex-end;
-    margin: 0 192px;
+    margin-bottom: 80px;
+    padding-right: 380px;
 }
 
 .sign-up {
